--- a/index.html
+++ b/index.html
@@ -1,15 +1,36 @@
 <!doctype html>
 <html lang="en">
+	
 	<head>
 		<meta charset="UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="icon" type="image/svg" href="./images/favicons/favicon.svg">
+		
+		<title>Rolletto Casino — Your Ultimate Online Gaming Destination</title>
+		
+		<meta name="description" content="Play at Rolletto Casino — a licensed online platform offering slots, live dealers, sports betting, and crypto payments. Claim bonuses up to £6,500!">
+		<link rel="canonical" href="index.html">
+		<meta name="robots" content="index, follow">
+		
+		<!-- Open Graph -->
+		<meta property="og:title" content="Rolletto Casino — Licensed Online Casino and Sports Betting">
+		<meta property="og:description" content="Step into the world of Rolletto: thrilling slots, live casino games, eSports, crypto-friendly payments, and huge bonuses.">
+		<meta property="og:image" content="./images/banners/preview.png">
+		
+		<!-- Twitter -->
+		<meta name="twitter:card" content="summary">
+		<meta name="twitter:title" content="Rolletto Casino — Top Online Slots, Live Games, and Crypto Payments">
+		<meta name="twitter:description" content="Join Rolletto Casino today! Get up to £6,500 in welcome bonuses, enjoy secure gaming, and play your favorite games from any device.">
+		<meta name="twitter:image" content="./images/banners/preview.png">
+		
+		
+		<link rel="icon" type="image/png" sizes="16x16" href="./images/favicons/favicon-16.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="./images/favicons/favicon-32.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="/images/favicons/favicon-apple.png">
 		<link rel="stylesheet" href="css/styles.css">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Syne:wght@400..800&display=swap" rel="stylesheet">
-		
-		<title>Savaspin Casino</title>
 	</head>
 	
 	<body>
@@ -388,6 +409,7 @@
 				<div class="container">
 					<nav class="footer__nav">
 						<ul class="footer__nav-list">
+							<li><a href="#" class="footer__nav-link">Contacts</a></li>
 							<li><a href="#" class="footer__nav-link">Privacy Policy</a></li>
 							<li><a href="#" class="footer__nav-link">Terms & Conditions</a></li>
 							<li><a href="#" class="footer__nav-link">FAQs</a></li>
