--- a/index.html
+++ b/index.html
@@ -1,36 +1,37 @@
 <!doctype html>
 <html lang="en">
-	
 	<head>
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		
-		<title>Rolletto Casino — Your Ultimate Online Gaming Destination</title>
+		<title>Rolletto Casino</title>
 		
-		<meta name="description" content="Play at Rolletto Casino — a licensed online platform offering slots, live dealers, sports betting, and crypto payments. Claim bonuses up to £6,500!">
-		<link rel="canonical" href="index.html">
-		<meta name="robots" content="index, follow">
+		<meta name="description" content="Lorem">
+		<link href="Lorem" rel="canonical">
 		
-		<!-- Open Graph -->
-		<meta property="og:title" content="Rolletto Casino — Licensed Online Casino and Sports Betting">
-		<meta property="og:description" content="Step into the world of Rolletto: thrilling slots, live casino games, eSports, crypto-friendly payments, and huge bonuses.">
+		<meta property="og:type" content="article">
+		<meta property="og:title" content="Lorem">
+		<meta property="og:description" content="Lorem">
+		<meta property="og:url" content="Lorem">
 		<meta property="og:image" content="./images/banners/preview.png">
+		<meta property="og:image:secure_url" content="./images/banners/preview.png">
 		
-		<!-- Twitter -->
 		<meta name="twitter:card" content="summary">
-		<meta name="twitter:title" content="Rolletto Casino — Top Online Slots, Live Games, and Crypto Payments">
-		<meta name="twitter:description" content="Join Rolletto Casino today! Get up to £6,500 in welcome bonuses, enjoy secure gaming, and play your favorite games from any device.">
+		<meta name="twitter:title" content="Lorem">
+		<meta name="twitter:description" content="Lorem">
 		<meta name="twitter:image" content="./images/banners/preview.png">
-		
 		
 		<link rel="icon" type="image/png" sizes="16x16" href="./images/favicons/favicon-16.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="./images/favicons/favicon-32.png">
-		<link rel="apple-touch-icon" sizes="180x180" href="/images/favicons/favicon-apple.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="./images/favicons/favicon-apple.png">
+		
 		<link rel="stylesheet" href="css/styles.css">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Syne:wght@400..800&display=swap" rel="stylesheet">
+		
+		<meta name="robots" content="ALL">
 	</head>
 	
 	<body>
@@ -50,31 +51,31 @@
 				</div>
 			</header>
 			
-			<aside class="sidebar">
-				<div class="burger-menu">
-					<div class="burger-menu__inner">
-						<div class="burger-menu__btn-wrapper">
-							<button
-								class="burger-menu__btn"
-								aria-label="open menu"
-								data-js-burger-button
-							>
-								<img
-									src="./images/icons/burger.svg"
-									alt="open menu"
-									height="24" width="24"
-								>
-							</button>
-						</div>
-						<a href="/" class="burger-menu__logo">
+			<div class="burger-menu">
+				<div class="burger-menu__inner">
+					<div class="burger-menu__btn-wrapper">
+						<button
+							class="burger-menu__btn"
+							aria-label="open menu"
+							data-js-burger-button
+						>
 							<img
-								src="./images/icons/logo-inline.svg"
-								width="141" height="26"
+								src="./images/icons/burger.svg"
+								alt="open menu"
+								height="24" width="24"
 							>
-						</a>
+						</button>
 					</div>
+					<a href="/" class="burger-menu__logo">
+						<img
+							src="./images/icons/logo-inline.svg"
+							width="141" height="26"
+						>
+					</a>
 				</div>
-				
+			</div>
+			
+			<aside class="sidebar">
 				<nav class="sidebar__menu">
 					<ul class="sidebar__list">
 						<li>
