push site to test

--- a/index.html
+++ b/index.html
@@ -27,9 +27,6 @@
 		<link rel="apple-touch-icon" sizes="180x180" href="./images/favicons/favicon-apple.png">
 		
 		<link rel="stylesheet" href="css/styles.css">
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Syne:wght@400..800&display=swap" rel="stylesheet">
 		
 		<meta name="robots" content="ALL">
 	</head>
@@ -83,7 +80,7 @@
 				<nav class="sidebar__menu">
 					<ul class="sidebar__list">
 						<li class="sidebar__item">
-							<a href="#" class="sidebar__link" title="App">
+							<a href="./app.html" class="sidebar__link" title="App">
 								<i class="sidebar__link-icon">
 									<img src="./images/icons/app.svg" alt="app" height="24" width="24">
 								</i>
@@ -91,7 +88,7 @@
 							</a>
 						</li>
 						<li class="sidebar__item">
-							<a href="/review.html" class="sidebar__link" title="Review">
+							<a href="./review.html" class="sidebar__link" title="Review">
 								<i class="sidebar__link-icon">
 									<img src="./images/icons/review.svg" alt="app" height="24" width="24">
 								</i>
@@ -390,7 +387,7 @@
 						<p>Are you still wondering, “Is Rolletto legit?” Rest assured, this licensed platform is celebrated for its fairness and dedication to customer satisfaction. Whether you’re a casual player or a seasoned gamer, Rolletto Casino combines innovation and excitement to deliver unforgettable gaming moments.</p>
 					</section>
 					
-					<section>
+					<section class="anchor-target" id="faq">
 						<h2>FAQ</h2>
 						<h3>Is Rolletto legit?</h3>
 						<p>Yes, this casino is fully licensed and operates under strict regulatory standards.</p>
@@ -414,10 +411,10 @@
 				<div class="container">
 					<nav class="footer__nav">
 						<ul class="footer__nav-list">
-							<li><a href="#" class="footer__nav-link">Contacts</a></li>
-							<li><a href="#" class="footer__nav-link">Privacy Policy</a></li>
-							<li><a href="#" class="footer__nav-link">Terms & Conditions</a></li>
-							<li><a href="#" class="footer__nav-link">FAQs</a></li>
+							<li><a href="./contacts.html" class="footer__nav-link">Contacts</a></li>
+							<li><a href="./private_policy.html" class="footer__nav-link">Privacy Policy</a></li>
+							<li><a href="./terms_conditions.html" class="footer__nav-link">Terms & Conditions</a></li>
+							<li><a href="#faq" class="footer__nav-link">FAQs</a></li>
 						</ul>
 					</nav>
 					
