--- a/login.html
+++ b/login.html
@@ -36,15 +36,15 @@
 			<header class="header">
 				<div class="container">
 					<div class="header__content">
-						<a href="/" class="header__logo" aria-label="Home">
-							<img src="./images/icons/logo.svg" alt="logo" height="32" width="83">
+						<a href="./index.html" class="header__logo" aria-label="Home">
+							<img src="./images/icons/logo.svg" alt="Sava spin logo" height="32" width="83">
 						</a>
-						<a href="/" class="header__logo-mobile" aria-label="Home">
-							<img src="./images/icons/logo-inline.svg" alt="logo" width="108" height="20">
+						<a href="./index.html" class="header__logo-mobile" aria-label="Home">
+							<img src="./images/icons/logo-inline.svg" alt="Sava spin logo" width="108" height="20">
 						</a>
 						
 						<div class="header__auth">
-							<a href="/login.html" class="header__auth-login">Log in</a>
+							<a href="./login.html" class="header__auth-login">Log in</a>
 							<button class="header__auth-sing-up psvn" type="button">Sing up</button>
 						</div>
 					</div>
@@ -57,6 +57,7 @@
 						<button
 							class="burger-menu__btn"
 							aria-label="open menu"
+							type="button"
 							data-js-burger-button
 						>
 							<img
@@ -66,10 +67,10 @@
 							>
 						</button>
 					</div>
-					<a href="/" class="burger-menu__logo">
+					<a href="./index.html" class="burger-menu__logo">
 						<img
 							src="./images/icons/logo-inline.svg"
-							alt="logo"
+							alt="Sava spin logo"
 							width="141" height="26"
 						>
 					</a>
@@ -219,7 +220,7 @@
 			</main>
 			
 			<div class="scroll-to-up" data-js-scroll-to-up>
-				<button class="scroll-to-up__btn" aria-label="scroll to up"></button>
+				<button class="scroll-to-up__btn" type="button" aria-label="scroll to up"></button>
 			</div>
 			
 			<footer class="footer">
@@ -235,12 +236,13 @@
 					
 					<div class="footer__copyright">
 						<img
-							src="images/icons/censor.svg"
+							src="./images/icons/censor.svg"
 							class="footer__copyright-icon"
-							alt="18+"
 							height="24" width="25"
+							loading="lazy"
+							alt="18+"
 						>
-						<p>© savaspin.com 2025. All rights reserved.</p>
+						<div>© savaspin.com 2025. All rights reserved.</div>
 					</div>
 				</div>
 			</footer>
