--- a/index.html
+++ b/index.html
@@ -444,6 +444,7 @@
 			
 		</div><!--END layout-->
 		
+		<script src="scripts/main.js" defer></script>
 		<script src="scripts/open-sidebar.js" defer></script>
 		<script src="scripts/scrollToTop.js" defer></script>
 	</body>
