--- a/private_policy.html
+++ b/private_policy.html
@@ -234,42 +234,43 @@
 					<br>
 					<ol>
 						<li><p>PRIVACY POLICY PROMISE</p></li>
-						<ol>
-							<li><p>Savaspin will always value and respect the privacy of
-								each and every one of its customers. Your privacy is
-								important both to you and to us and we make the following
-								promise to you:</p></li>
-							<li><p>Savaspin is committed to protecting your privacy. We
-								believe in using your personal information to make things
-								simpler and better for you. We will always keep your
-								personal information safe. We’ll be clear and open with you
-								about why we collect your personal information and how we
-								use it. Where you have choices or rights, we’ll explain them
-								to you and respect your wishes.</p></li>
-							<li><p>In order to make a withdrawal, a player must play
-								through active deposited amounts at least once prior to
-								withdrawal. This procedure is in line with anti-money
-								laundering practices.</p></li>
-							<li><p>The Company reserves the right to use additional
-								procedures and means to verify a client's identity (Know
-								Your Client) when effecting deposits into the account. This
-								could include (but is not limited to) a selfie with a
-								document or form of identification. In order to verify a
-								player`s account, casino management requires documents (ID,
-								payment systems, utility bills еtc) in Latin or Cyrillic
-								alphabet. In case a player doesn’t have an opportunity to
-								provide documents in the above-mentioned alphabet, the
-								Casino reserves the right to demand video verification where
-								the player shows his/her documents.</p></li>
-							<li><p>Players depositing in CAD can only withdraw money via
-								EcoPayz, Interac, Instadebit, and iDebit (a minimum deposit
-								via these payment options is required to activate them for
-								withdrawal).</p></li>
-							<li><p>The Company reserves the right to make a phone call to
-								the number provided in the client's account, which can be a
-								necessary part of the KYC procedure. Until the account is
-								fully verified, no payouts will be processed.</p></li>
-						</ol>
+					
+							<ol>
+								<li><p>Savaspin will always value and respect the privacy of
+									each and every one of its customers. Your privacy is
+									important both to you and to us and we make the following
+									promise to you:</p></li>
+								<li><p>Savaspin is committed to protecting your privacy. We
+									believe in using your personal information to make things
+									simpler and better for you. We will always keep your
+									personal information safe. We’ll be clear and open with you
+									about why we collect your personal information and how we
+									use it. Where you have choices or rights, we’ll explain them
+									to you and respect your wishes.</p></li>
+								<li><p>In order to make a withdrawal, a player must play
+									through active deposited amounts at least once prior to
+									withdrawal. This procedure is in line with anti-money
+									laundering practices.</p></li>
+								<li><p>The Company reserves the right to use additional
+									procedures and means to verify a client's identity (Know
+									Your Client) when effecting deposits into the account. This
+									could include (but is not limited to) a selfie with a
+									document or form of identification. In order to verify a
+									player`s account, casino management requires documents (ID,
+									payment systems, utility bills еtc) in Latin or Cyrillic
+									alphabet. In case a player doesn’t have an opportunity to
+									provide documents in the above-mentioned alphabet, the
+									Casino reserves the right to demand video verification where
+									the player shows his/her documents.</p></li>
+								<li><p>Players depositing in CAD can only withdraw money via
+									EcoPayz, Interac, Instadebit, and iDebit (a minimum deposit
+									via these payment options is required to activate them for
+									withdrawal).</p></li>
+								<li><p>The Company reserves the right to make a phone call to
+									the number provided in the client's account, which can be a
+									necessary part of the KYC procedure. Until the account is
+									fully verified, no payouts will be processed.</p></li>
+							</ol>
 					</ol>
 					<br>
 					<ol>
@@ -863,14 +864,9 @@
 
 </div><!--END layout-->
 
-<script
-	defer
-	src="scripts/open-sidebar.js"
-></script>
-<script
-	defer
-	src="scripts/scrollToTop.js"
-></script>
+<script src="scripts/main.js" defer></script>
+<script defer src="scripts/open-sidebar.js"></script>
+<script defer src="scripts/scrollToTop.js"></script>
 </body>
 </html>
 
