--- a/app.html
+++ b/app.html
@@ -324,7 +324,9 @@
 			
 		</div><!--END layout-->
 		
+		<script src="scripts/main.js" defer></script>
 		<script src="scripts/open-sidebar.js" defer></script>
+		<script src="scripts/main.js" defer></script>
 		<script src="scripts/scrollToTop.js" defer></script>
 	</body>
 </html>
